@@ -1,3 +1,8 @@
+2007-10-31 Jim Sack <jgsack@san.rr.com>
+	* src/Gramps.py In run(), skip error-dialog for things like 
+	exit(0) such as used when processing command-line operations.
+	Add missing gtk.main_quit needed to terminate process
+
 2007-10-29 Gary Burton <gary.burton@zen.co.uk>
 	* src/RelLib/_Person.py: setting the death index wrongly.
 
